# licheaters

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: notes.md
gathercheater/: constants.py  functions.py  gathercheater.py
src/gathercheater/: .gitignore  constants.py  functions.py  gathercheater.py
tests/: conftest.py  test_functions.py  test_gathercheater.py
