[metadata]
name = gathercheater
description = Check your games for users who violated tos or closed account
author = Mat Y
license = GPL3
license_files = LICENSE.md
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    gathercheater
install_requires =
    berserk>=0.10.0
    certifi>=2022.9.24
    charset-normalizer>2
    Deprecated>1
    idna>3
    ndjson>=0.3.1
    numpy>1
    pandas>1
    python-dateutil>2.5
    python-dotenv>=0.21.0
    pytz>=2022.6
    requests>2
    six>1
    urllib3>1
    wrapt>1
package_dir =
    =src
zip_safe = no

[options.extras_require]

testing =
    tox>3
    mypy>.91
    pytest>7
    pytest-cov>=4
    flake8>=5
[options.package_data]

gathercheater = py.typed

[flake8]
max-line-length = 160



