[metadata]
name = gathercheater
description = Check your games for users who violated tos or closed account
author = Mat Y
license = GPL3
license_files = LICENSE.md
platforms = win32
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages =
    gathercheater
install_requires =
    berserk>=0.12.3
    pandas>1
    python-dotenv>=0.20.0
package_dir =
    =src
zip_safe = no

[options.extras_require]

testing =
    tox>3
    mypy>1
    pytest>7
    pytest-cov>=4
    flake8>=5
[options.package_data]

gathercheater = py.typed

[flake8]
max-line-length = 160



